# roma_coffee

./: .dockerignore  .env.docker.example  .env.example  .env.local.example  .env.prod  .env.prod.example  Dockerfile  README.md  Taskfile.yaml  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  requirements.txt
.github/workflows/: db-backup-to-gdrive.yml
config/: settings.py  urls.py
deploy/caddy/: Caddyfile
deploy/nginx/: default.conf
templates/: base.html
templates/auth/: admin_dashboard.html  barista_dashboard.html  choice.html  dashboard.html  layout.html  login.html  password_reset.html  register.html
templates/components/: button.html  form_errors.html  input.html
users/: admin.py  api.py  authentication.py  forms.py  forms_barista.py  models.py  presenters.py  services.py  urls.py  utils.py  views.py
users/domain/: loyalty.py  roles.py
users/migrations/: 0001_initial.py  0002_alter_user_groups_alter_user_is_superuser_and_more.py  0002_user_qr_code_fields.py  0003_merge_20260323_1834.py  0004_user_roles_and_loyalty.py  0005_user_loyalty_status.py  0006_normalize_phone_storage.py  0007_add_admin_role.py  0008_scanevent.py
